--- a/profile.html
+++ b/profile.html
@@ -48,21 +48,17 @@ body,td,th {
     </table>
       <table width="1024" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="170"><a href="index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/3.1.jpg',1)"><img src="images/3.jpg" width="170" height="50" id="Image3" /></a></td>
+          <td width="170"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image3','','images/3.1.jpg',1)"><img src="images/3.jpg" width="170" height="50" id="Image3" /></a></td>
           <td width="170"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image4','','images/4.jpg',1)"><img src="images/4.jpg" width="170" height="50" id="Image4" /></a></td>
           <td width="170"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image5','','images/5.jpg',1)"><img src="images/5.jpg" width="170" height="50" id="Image5" /></a></td>
           <td width="172"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image6','','images/6.jpg',1)"><img src="images/6.jpg" name="Image6" width="171" height="50" id="Image6" /></a></td>
           <td width="171"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image7','','images/7.jpg',1)"><img src="images/7.jpg" name="Image7" width="171" height="50" id="Image7" /></a></td>
-          <td width="171"><a href="profile.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/8.1.jpg',1)"><img src="images/8.jpg" name="Image8" width="172" height="50" id="Image8" /></a></td>
+          <td width="171"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image8','','images/8.1.jpg',1)"><img src="images/8.jpg" name="Image8" width="172" height="50" id="Image8" /></a></td>
         </tr>
     </table>
       <table width="1024" border="0" cellspacing="0" cellpadding="0">
         <tr>
-          <td width="400"><img src="images/291167464_1196327124464439_7107650899369609677_n.jpg" width="400" height="300" /></td>
-          <td width="624" bgcolor="#1032A0">ชื่อ:นายสหชัย สุดสน<br />
-            ครูผู้สอน:ครูกีรพร หมอนทอง<br />
-            เเผนการเรียน คอมพิวเตอร์เเละเทคโนโลยีสารสนเทศ<br />
-          โรงเรียนมัธยมบ้านบางกะปิ</td>
+          <td><img src="images/13.jpg" width="1024" height="800" /></td>
         </tr>
     </table>
       <table width="1024" border="0" cellspacing="0" cellpadding="0">
